# src/schemas/dailylog.schema.ts
@@ -37,4 +37,12 @@ export const updateLog = z.object({
   consumtionGram: z
     .number()
     .min(0, "Consumption gram must be a non-negative number"),
+  totalCalories: z
+    .number()
+    .min(0, "Total calories must be a non-negative number"),
+  totalProtein: z
+    .number()
+    .min(0, "Total protein must be a non-negative number"),
+  totalCarbs: z.number().min(0, "Total carbs must be a non-negative number"),
+  totalFat: z.number().min(0, "Total fat must be a non-negative number"),
 });
